<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textAct1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/messageAct1"
        android:textColor="#FF0066"
        android:textSize="10pt" />

    <Button
        android:id="@+id/easyBtn"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sendMes" />

    <TextView
        android:id="@+id/txtRecev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/act2Mess"
        android:textColor="#3300FF"
        android:textSize="10pt" />

</LinearLayout>